test/SemanticAnalysis/Templates/ClassDuplicateTemplate.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

template <typename T, typename T>
// CHECK: .loci:4:23: error: declaration of 'T' shadows template parameter
class TestClass() { }

// CHECK: 1 error generated.
